[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Keys/UIArrow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/HowToPlay/TextureButton.gd" type="Script" id=2]
[ext_resource path="res://SoundEffects/Perry_SEs_UIClick.wav" type="AudioStream" id=3]
[ext_resource path="res://SoundEffects/Perry_SEs_UIHover.wav" type="AudioStream" id=4]

[node name="PageButton" type="TextureButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.0
margin_right = 60.0
margin_bottom = 30.0
focus_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "SoundEffects"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SoundEffects"

[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
